--- a/reactMovieApp/src/components/MovieCard.css
+++ b/reactMovieApp/src/components/MovieCard.css
@@ -1,10 +1,14 @@
-.card {
-    margin: 0;
-    display: flex;
-    align-items: center;
+.grid{
+    display: grid;
+    margin-left: .5px;
+    grid-template-columns: repeat(4,1fr);
+    grid-gap: 0.2em;
     justify-content: center;
-    min-height: 100vh;
-    padding: 20px;
-    flex-wrap: wrap;
-    justify-items: center;
 }
+
+.card_description {
+    padding: 20px;
+}
+
+  
+  
