--- a/reactMovieApp/src/features/movieList/MovieList.css
+++ b/reactMovieApp/src/features/movieList/MovieList.css
@@ -1,14 +1,9 @@
 .grid{
-    display: grid;
-    margin-left: .5px;
-    grid-template-columns: repeat(4,1fr);
-    grid-gap: 0.2em;
-    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .card_description {
     padding: 20px;
 }
-
-  
-  
