--- a/reactMovieApp/src/features/search/SearchMovie.css
+++ b/reactMovieApp/src/features/search/SearchMovie.css
@@ -1,11 +1,24 @@
 .form {
-    padding: 10px 20px 10px 0;
-    display: flex;
-    flex-direction: row;
-    position: relative;
+    padding: 10px 30px 10px 0;
 }
 
 .search_form {
     padding: 7px;
-    width: 100%;
+    width: 70%;
+    margin-right: 10px;
+}
+
+.form button {
+    margin: 0;
+    position: absolute;
+    transform: none;
+    top: auto;
+    left: auto;
+    background-color: #688282;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 19px;
+    color: #fff;
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
 }
